--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,5 @@
-body {
-  margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.calc {
-  width: 100vh;
-}
-
-.calc-label {
-  text-align: right;
-}
-
-.calc-keys {
-  margin: 0 auto;
+:root {
+  --primary: orange;
+  --secondary: lightgray;
+  --dark: darkgray;
 }
